[project]
name = "contextfilter"
version = "0.5.2"
description = "A flexible zero-shot text filtering tool that detects toxicity and supports user-defined semantic rules for context-aware moderation."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deep-translator>=1.11.4",
    "fastapi>=0.137.1",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "langdetect>=1.0.9",
    "matplotlib>=3.11.0",
    "nest-asyncio>=1.6.0",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pooch>=1.9.0",
    "pydantic>=2.13.4",
    "python-multipart>=0.0.32",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "tinydb>=4.8.2",
    "torch>=2.11.0",
    "transformers>=5.12.0",
    "uvicorn>=0.49.0",
]
# IMPORTANT: If you have a GPU, you should install torch with your specific GPU support
# go to https://pytorch.org/get-started/locally/ and select your GPU and install the appropriate version
# in my case I used: uv pip install -U torch --index-url https://download.pytorch.org/whl/cu126
